chore: rever back to using string for shares response
