# src/handlers/v1/actions/RefreshWalletShares.ts
@@ -3,12 +3,12 @@ import {
   RefreshWalletShares400Type,
   RefreshWalletShares403Type,
   RefreshWalletSharesRequestType,
-} from '../../../generated';
+} from "../../../generated";
 import {
   authenticatedEvmClient,
   authenticatedSvmClient,
-} from '../../../services/mpc/constants';
-import { TypedRequestHandler } from '../../../types/express';
+} from "../../../services/mpc/constants";
+import { TypedRequestHandler } from "../../../types/express";
 
 /**
  * /api/v1/actions/RefreshWalletShares
@@ -31,11 +31,11 @@ export const RefreshWalletShares: TypedRequestHandler<{
   const environmentId = req.params.environmentId;
   if (!authToken) {
     return res.status(403).json({
-      error_code: 'api_key_required',
-      error_message: 'API key is required',
+      error_code: "api_key_required",
+      error_message: "API key is required",
     });
   }
-  if (chainName === 'EVM') {
+  if (chainName === "EVM") {
     const evmClient = await authenticatedEvmClient({
       authToken,
       environmentId,
@@ -46,12 +46,12 @@ export const RefreshWalletShares: TypedRequestHandler<{
       password,
     });
     if (!refreshResults) {
-      throw new Error('External server key shares not found');
+      throw new Error("External server key shares not found");
     }
     return res.status(200).json({
-      externalServerKeyShares: refreshResults,
+      externalServerKeyShares: JSON.stringify(refreshResults),
     });
-  } else if (chainName === 'SVM') {
+  } else if (chainName === "SVM") {
     const svmClient = await authenticatedSvmClient({
       authToken,
       environmentId,
@@ -62,12 +62,12 @@ export const RefreshWalletShares: TypedRequestHandler<{
       password,
     });
     if (!refreshResults) {
-      throw new Error('External server key shares not found');
+      throw new Error("External server key shares not found");
     }
     return res.status(200).json({
-      externalServerKeyShares: refreshResults,
+      externalServerKeyShares: JSON.stringify(refreshResults),
     });
   } else {
-    throw new Error('Unsupported chain');
+    throw new Error("Unsupported chain");
   }
 };
